<resources>
    <string name="app_name">LanguagePreferenceApp</string>
    <string name="default_welcome">No language Chosen Yet...</string>

    <!-- Instructions -->
    <string name="instructions">Change your language:</string>
    <string name="instructions1">Change your color:</string>
    <string name="btnSet">Change preferences</string>

    <!-- Language settings -->
    <string name="language1">French</string>
    <string name="language2">German</string>
    <string name="language3">Spanish</string>

    <string name="greeting1">Bonjour le monde</string>
    <string name="greeting2">Hallo Welt</string>
    <string name="greeting3">Hola Mundo</string>

    <!-- Color settings -->
    <string name="color1">Red</string>
    <string name="color2">Green</string>
    <string name="color3">Blue</string>
</resources>
